# computer-vision-bites

./: NeRF-opacity-vs-density.ipynb  README.md  pdf-sampling.ipynb  requirements.txt  sampling-from-disparity-space.ipynb  sampling-from-gaussian-distribution.ipynb  uniform-sampling.ipynb
homography/: CMakeLists.txt  README.md
homography/data/: rabbit_hello_points.txt  rabbit_mask_points.txt  rainbow_points.txt
homography/source/: homography.hpp  main.cpp
superimpose-heatmap/: CMakeLists.txt  README.md
superimpose-heatmap/source/: cv.cpp  cv.hpp  main.cpp  utils.hpp
