cmake_minimum_required(VERSION 3.18)
project(superimpose-heatmap)
set(OpenCV_DIR /Users/stanathong/Dev/Library/install/lib/cmake/opencv4)
find_package( OpenCV REQUIRED )
MESSAGE(STATUS "Include dirs ${OpenCV_INCLUDE_DIRS}")
MESSAGE(STATUS "Link libraries ${OpenCV_LIBS}")
include_directories( ${OpenCV_INCLUDE_DIRS} )
file(GLOB_RECURSE sources source/*.cpp)
add_executable(${PROJECT_NAME} ${sources})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
